kubernetes/apps/bazarr/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: bazarr-ingress
  namespace: media
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`bazarr.sobrinho.pt`)
      kind: Rule
      services:
        - name: bazarr
          port: main
  tls:
    secretName: bazarr-cert
